--- a/build.common.gradle
+++ b/build.common.gradle
@@ -22,7 +22,9 @@ apply plugin: 'com.android.application'
 android {
 
     compileSdkVersion 28
-
+    lintOptions {
+        abortOnError false
+    }
     signingConfigs {
         debug {
             keyAlias 'androiddebugkey'
