--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -10,10 +10,10 @@
 
 
 // Custom definitions may go here
-
-// Include common definitions from above.
 apply from: '../build.common.gradle'
-
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
+// Include common definitions from above.
 repositories {
     maven { url = "https://dl.bintray.com/first-tech-challenge/ftcsdk/" }
 }
@@ -22,4 +22,6 @@ dependencies {
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
     implementation 'com.arcrobotics.ftclib:vision:1.1.0' // vision
     implementation 'com.arcrobotics:ftclib:1.1.5'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version" //Kotlin
 }
