--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,15 @@
  * It is extraordinarily rare that you will ever need to edit this file.
  */
 buildscript {
+    ext.kotlin_version = '1.4.20'
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
     }
 }
 
