--- a/build.common.gradle
+++ b/build.common.gradle
@@ -21,10 +21,8 @@ apply plugin: 'com.android.application'
 
 android {
 
-    compileSdkVersion 28
-    lintOptions {
-        abortOnError false
-    }
+    compileSdkVersion 29
+
     signingConfigs {
         debug {
             keyAlias 'androiddebugkey'
@@ -41,9 +39,8 @@ android {
     defaultConfig {
         signingConfig signingConfigs.debug
         applicationId 'com.qualcomm.ftcrobotcontroller'
-        minSdkVersion 24
+        minSdkVersion 23
         targetSdkVersion 28
-        multiDexEnabled true
 
         /**
          * We keep the versionCode and versionName of robot controller applications in sync with
@@ -81,7 +78,7 @@ android {
             // Disable debugging for release versions so it can be uploaded to Google Play.
             //debuggable true
             ndk {
-                abiFilters "armeabi-v7a"
+                abiFilters "armeabi-v7a", "arm64-v8a"
             }
         }
         debug {
@@ -89,14 +86,14 @@ android {
             jniDebuggable true
             renderscriptDebuggable true
             ndk {
-                abiFilters "armeabi-v7a"
+                abiFilters "armeabi-v7a", "arm64-v8a"
             }
         }
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 
     sourceSets.main {
@@ -106,7 +103,6 @@ android {
 }
 
 repositories {
-    jcenter()
     flatDir {
         dirs rootProject.file('libs')
     }
