--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -13,18 +13,18 @@
 
 // Include common definitions from above.
 apply from: '../build.common.gradle'
+apply from: '../build.dependencies.gradle'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-
-repositories {
-    maven { url = "https://dl.bintray.com/first-tech-challenge/ftcsdk/" }
-}
 
 dependencies {
+    implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
     implementation 'com.arcrobotics.ftclib:vision:1.1.0' // vision
     implementation 'com.arcrobotics:ftclib:1.2.0-beta' // core
     implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+
+    implementation 'com.acmerobotics.roadrunner:core:0.5.3'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version" //Kotlin
 }
